CR fixes/refactoring

--- a/apps/ledger-live-desktop/static/i18n/en/app.json
+++ b/apps/ledger-live-desktop/static/i18n/en/app.json
@@ -2089,7 +2089,7 @@
     "lockedBalance": "Locked balance",
     "lockedTooltip": "Assets must be locked and voted for validator groups before earning rewards.",
     "withdrawableBalance": "Withdrawable balance",
-    "withdrawableTooltip": "This amount you can withdraw now.",
+    "withdrawableTooltip": "The amount you can withdraw now.",
     "delegation": {
       "activeTooltip": "Active vote generates rewards",
       "pendingTooltip": "Pending vote does not generate rewards and needs to be activated after 24h",
