--- a/apps/ledger-live-mobile/src/locales/fr/common.json
+++ b/apps/ledger-live-mobile/src/locales/fr/common.json
@@ -1541,7 +1541,12 @@
       "WITHDRAW_UNBONDED": "Retrait",
       "NOMINATE": "Nomination",
       "CHILL": "Retirer les nominations",
-      "SET_CONTROLLER": "Définir contrôleur"
+      "SET_CONTROLLER": "Définir contrôleur",
+      "ACTIVATE": "Activated",
+      "LOCK": "Locked",
+      "UNLOCK": "Unlocked",
+      "REVOKE": "Revoked",
+      "REGISTER": "Registered"
     }
   },
   "operationDetails": {
