--- a/apps/ledger-live-mobile/src/locales/tr/common.json
+++ b/apps/ledger-live-mobile/src/locales/tr/common.json
@@ -1541,7 +1541,12 @@
       "WITHDRAW_UNBONDED": "Çekim",
       "NOMINATE": "Adaylık",
       "CHILL": "Adaylıkları temizle",
-      "SET_CONTROLLER": "Denetleyici belirle"
+      "SET_CONTROLLER": "Denetleyici belirle",
+      "ACTIVATE": "Activated",
+      "LOCK": "Locked",
+      "UNLOCK": "Unlocked",
+      "REVOKE": "Revoked",
+      "REGISTER": "Registered"
     }
   },
   "operationDetails": {
