--- a/apps/ledger-live-desktop/static/i18n/en/app.json
+++ b/apps/ledger-live-desktop/static/i18n/en/app.json
@@ -2088,6 +2088,8 @@
   "celo": {
     "lockedBalance": "Locked balance",
     "lockedTooltip": "Assets must be locked and voted for validator groups before earning rewards.",
+    "nonvotingLockedBalance": "Non-voting locked balance",
+    "nonvotingLockedTooltip": "The balance of locked assets available to be used for voting",
     "withdrawableBalance": "Withdrawable balance",
     "withdrawableTooltip": "The amount you can withdraw now.",
     "delegation": {
