feat: add Celo activate vote + withdraw alert banners feat: always show all Celo staking balances feat: disable rounding of Celo transaction amounts feat: update Celo withdrawable assets localization

--- a/apps/ledger-live-desktop/static/i18n/en/app.json
+++ b/apps/ledger-live-desktop/static/i18n/en/app.json
@@ -2324,7 +2324,7 @@
       }
     },
     "alerts": {
-      "withdrawableAssets": "Assets you recently unlocked can now be withdrawn.",
+      "withdrawableAssets": "You have a withdrawable balance",
       "activatableVotes": "You have votes that can now be activated."
     }
   },
