--- a/apps/ledger-live-desktop/static/i18n/en/app.json
+++ b/apps/ledger-live-desktop/static/i18n/en/app.json
@@ -2086,6 +2086,17 @@
     }
   },
   "celo": {
+    "account": {
+      "subHeader": {
+        "cardTitle": "Powered by Figment",
+        "moreInfo": "More info",
+        "drawerTitle": "Figment integration",
+        "title": "The CELO  token is now available on Ledger Live",
+        "description": "You can now start to manage your CELO tokens and secure them through Ledger Live.",
+        "description2": "The Celo token is native to the Celo chain and is used for everything from transactions, staking and many upcoming features.",
+        "website": "Powered by Figment"
+      }
+    },
     "lockedBalance": "Locked balance",
     "lockedTooltip": "Assets must be locked and voted for validator groups before earning rewards.",
     "nonvotingLockedBalance": "Non-voting locked balance",
