--- a/apps/ledger-live-mobile/src/locales/ja/common.json
+++ b/apps/ledger-live-mobile/src/locales/ja/common.json
@@ -1541,12 +1541,7 @@
       "WITHDRAW_UNBONDED": "引き出す",
       "NOMINATE": "ノミネート",
       "CHILL": "ノミネートを解除する",
-      "SET_CONTROLLER": "コントローラーを設定",
-      "ACTIVATE": "Activated",
-      "LOCK": "Locked",
-      "UNLOCK": "Unlocked",
-      "REVOKE": "Revoked",
-      "REGISTER": "Registered"
+      "SET_CONTROLLER": "コントローラーを設定"
     }
   },
   "operationDetails": {
